Had the name of the script and the js file wrong

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1> Boone Resturaunt Picker </h1>
     <p id="resultBox"> Your randomly chosen Boone resturaunt is: <br> </p>
-    <button onclick="chooseResturaunt()"> Choose Resturaunt </button>"
+    <button onclick="pickBooneRestaurant()"> Choose Restauraunt </button>"
 
-<script src="chooseResturaunt.js"></script>
+<script src="randScript.js"></script>
 </body>
 </html>
