Removed an extra quotation mark

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1> Boone Resturaunt Picker </h1>
     <p id="resultBox"> Your randomly chosen Boone resturaunt is: <br> </p>
-    <button onclick="pickBooneRestaurant()"> Choose Restauraunt </button>"
+    <button onclick="pickBooneRestaurant()"> Choose Restauraunt </button>
 
 <script src="randScript.js"></script>
 </body>
