--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-
 <html>
 
 <head> 
-    <title> <bold> Boone Resturaunt Picker </bold> </title>
+    <title>Boone Restaurant Picker</title>
 </head>
-<body>
-    <h1> Boone Resturaunt Picker </h1>
-    <select name= "priceRange" id="priceRange">
-        <option value = "1"> Cheap </option>
-        <option value = "2"> Moderate </option>
-        <option value = "3"> Expensive </option>
-    </select>
-    <p id="resultBox"> Your randomly chosen Boone resturaunt is: <br> </p>
-    <p id="rangeBox">  Your chosen price range is: <br> </p>
 
-    <button onclick="pickBooneRestaurant()"> Choose Restauraunt </button>
-<script src="randScript.js"></script>
+<body>
+    <h1>Boone Restaurant Picker</h1>
+    <select name="priceRange" id="priceRange">
+        <option value="1">Cheap</option>
+        <option value="2">Moderate</option>
+        <option value="3">Expensive</option>
+    </select>
+    <p id="resultBox">Your randomly chosen Boone restaurant is:<br></p>
+    <p id="rangeBox">Your chosen price range is:<br></p>
+
+    <button onclick="pickBooneRestaurant()">Choose Restaurant</button>
+    <script src="randScript.js"></script>
 </body>
 </html>
-
