updated option values for price dropdown

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Boone Restaurant Picker</h1>
     <select name="priceRange" id="priceRange">
-        <option value="1">Cheap</option>
-        <option value="2">Moderate</option>
-        <option value="3">Expensive</option>
+        <option value="Cheap">Cheap</option>
+        <option value="Moderate">Moderate</option>
+        <option value="Expensive">Expensive</option>
     </select>
     <p id="resultBox">Your randomly chosen Boone restaurant is:<br></p>
     <p id="rangeBox">Your chosen price range is:<br></p>
