added images for each restaurant

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 
     <button onclick="pickBooneRestaurant()">Choose Restaurant</button>
     <script src="randScript.js"></script>
+
+    <div class="restaurant">
+        <img id="restaurantImage" src="">
+    </div>
 </body>
 
 </html>
