--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <option value="Expensive">Expensive</option>
     </select>
     <p id="rangeBox">Your chosen price range is:<br></p>
-    <p id="resultBox">Your randomly chosen Boone restaurant is:<br></p>
+    <p id="resultText">Your randomly chosen Boone restaurant is:<br></p>
+    <p id="resultBox"></p>
 
 
     <button onclick="pickBooneRestaurant()">Choose Restaurant</button>
