added formatting to keep images the same size

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         background-color: #000000;
         color: #ffffff;
     }
+
+    .restaurant img {
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
+    }
 </style>
 
 <body>
@@ -63,6 +69,7 @@
     <div class="restaurant">
         <img id="restaurantImage" src="">
     </div>
+
 </body>
 
 </html>
