--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
     }
 
     .restaurant img {
-        width: 300px;
-        height: 300px;
+        width: 500px;
+        height: 500px;
         object-fit: cover;
+        max-width: 100%;
+        max-height: 100%;
     }
 </style>
 
