had too many newlines and updated text incorrectly

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <option value="Expensive">Expensive</option>
     </select>
     <p id="rangeBox">Your chosen price range is:<br></p>
-    <p id="resultText">Your randomly chosen Boone restaurant is:<br></p>
+    <p id="resultText">Your randomly chosen Boone restaurant is:</p>
     <br>
     <p id="resultBox"></p>
 
